# deal

./: .gitignore  .gitmodules  .semgrepignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  SHA256SUMS.template  build.zig  build.zig.zon
.github/workflows/: ci.yml  release.yml  spec-freshness.yml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.1.0-MILESTONE-AUDIT.md
.planning/debug/resolved/: phase-1-5-gate-failure.md
.planning/decisions/: ADR-deal-ir-v0.md  ADR-deal-stdlib-numeric-model.md  ADR-document-generation.md  ADR-graphical-view-projection-and-sync.md  ADR-phase-1.5-fresh-worktree-verification.md  ADR-phase-1.5-m01-sd10-optional-semicolon.md  ADR-phase-4-dimension-metadata-syntax.md  ADR-phase-4-nc1-domain-amendment.md  ADR-phase-5-matlab-subprocess.md  ADR-portion-marking-classification.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: DEAL-LANG-ROADMAP-7f3e9c2a.json  DESIGN-DECISIONS-7d3f4a92.json  README-7a3f2c91.json  deal-ebnf-7a3e9b2c.json  dealx-ebnf-a7b3c2d1.json  lexical-7b3d9f2a.json
.planning/phases/01-zig-compiler-core/: 01-01-SUMMARY.md  01-01-foundation-PLAN.md  01-02-SUMMARY.md  01-02-lexer-PLAN.md  01-03-SUMMARY.md  01-03-parser-deal-PLAN.md  01-04-SUMMARY.md  01-04-parser-dealx-PLAN.md  01-05-SUMMARY.md  01-05-error-recovery-PLAN.md  01-06-SUMMARY.md  01-06-c-abi-and-gate-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  (+7 more)
cli/: Cargo.toml
cli/src/: closure.rs  evidence.rs  fix_imports.rs  lib.rs  main.rs  model_values.rs  render.rs  reporter.rs  reqif.rs  reqif_schema.rs  resolver.rs  schema_registry.rs  sims_protocol.rs  simulate.rs  sysml_v2.rs  verify.rs
cli/tests/: check_subcommand.rs  check_workspace_index.rs  cli_smoke.rs  closure_fixture.rs  dep_discovery_dedup.rs  e2500_cli.rs  evidence_baseline.rs  fmt_subcommand.rs  golden_fixture_schema_validity.rs  golden_reqif.rs  golden_sysml_v2.rs  key_order.rs  layout_agnostic.rs  parse_subcommand.rs  phase5_e2e.rs  resolver_test.rs  simulate_integration.rs  sysml_validate.rs  verify_engine.rs
cli/tests/fixtures/closure-proj/: deal.toml
cli/tests/fixtures/closure-proj/app/: main.deal
cli/tests/fixtures/closure-proj/app/bad/: uses_unimported.deal
cli/tests/fixtures/closure-proj/app/geo/: extra.deal  index.deal  shapes.deal
cli/tests/fixtures/closure-proj/app/orphan/: dead.deal
deal-closure/: Cargo.toml
deal-closure/src/: lib.rs
deal-config/: Cargo.toml
deal-config/src/: lib.rs
deal-ffi/: Cargo.toml  build.rs
deal-ffi/src/: lib.rs
include/: deal.h
lsp/: Cargo.toml  README.md
lsp-smoke/: Cargo.toml
lsp-smoke/src/: main.rs
lsp/src/: backend.rs  code_action.rs  code_lens.rs  completion.rs  debounce.rs  definition.rs  diagnostics.rs  doc_links.rs  documents.rs  folding.rs  formatting.rs  hover.rs  index.rs  inlay.rs  lib.rs  main.rs  references.rs  rename.rs  semantic_tokens.rs  signature.rs  symbols.rs  sysml_mapping.rs  workspace.rs
lsp/tests/: showcase.rs
lsp/tests/fixtures/closure-proj/: deal.toml
lsp/tests/fixtures/closure-proj/model/: app.deal
lsp/tests/golden/formatted/: battery.deal.expected
lsp/tests/golden/semantic_tokens/: BatteryPack.deal.expected.json
scripts/: diff-only-new-fields.sh  phase-3-smoke.sh  phase-4-smoke.sh  phase-5-smoke.sh  spec-bump.sh  verify-fresh-worktree.sh
src/: ast.zig  diagnostics.zig  expr.zig  fmt.zig  ir.zig  json.zig  keywords.zig  lexer.zig  lib.zig  lowering.zig  parser.zig  parser_deal.zig  parser_dealx.zig  sema.zig  source_map.zig
src/sim/: deal_sim.zig  range_model.zig  zig_runner.zig
tests/: showcase
tests/ffi/: Cargo.toml  build.rs
tests/ffi/src/: lib.rs
tests/ffi/tests/: gate.rs  parse.rs
tests/malformed/: _manifest.txt  gen_drop_byte_battery_05.deal  gen_drop_byte_charging_10.deal  gen_drop_byte_components_00.deal  gen_drop_byte_components_25.deal  gen_drop_byte_constraints_00.deal  gen_drop_byte_index_05.deal  gen_drop_byte_motor_20.deal  gen_drop_byte_needs_10.deal  gen_drop_byte_sedan_20.dealx  gen_drop_byte_system_25.deal  gen_drop_byte_thermal_15.deal  gen_drop_byte_vehicle_15.dealx  gen_inject_garbage_behaviors_03.deal  gen_inject_garbage_behaviors_28.deal  gen_inject_garbage_charging_13.deal  gen_inject_garbage_components_03.deal  gen_inject_garbage_driving_28.deal  gen_inject_garbage_index_08.deal  gen_inject_garbage_index_13.deal  gen_inject_garbage_index_23.deal  gen_inject_garbage_precision_23.deal  gen_inject_garbage_traceability_18.dealx  gen_inject_garbage_vehicle_18.dealx  gen_swap_pair_battery_21.deal  gen_swap_pair_behaviors_06.deal  gen_swap_pair_electrical_11.deal  gen_swap_pair_index_11.deal  gen_swap_pair_index_16.deal  gen_swap_pair_motor_01.deal  gen_swap_pair_motor_26.deal  gen_swap_pair_needs_26.deal  gen_swap_pair_performance_16.dealx  gen_swap_pair_precision_01.deal  gen_swap_pair_system_06.deal  gen_swap_pair_traceability_21.dealx  gen_truncate_battery_02.deal  gen_truncate_battery_27.deal  gen_truncate_behaviors_22.deal  gen_truncate_calcs_02.deal  (+50 more)
tests/schemas/: README.md
tests/unit/: _all.zig  c_abi_invalid_utf8.zig  c_abi_no_leaks.zig  c_abi_source_too_large.zig  comment_attachment.zig  determinism_lower_twice.zig  determinism_parse_twice.zig  diag_json_roundtrip.zig  expr_precedence.zig  fmt_roundtrip.zig  lexer_behavioral.zig  lexer_calc.zig  lexer_comments.zig  lexer_keywords.zig  lexer_mode_flip.zig  lexer_snapshot.zig  lexer_templates.zig  lowering_behavioral.zig  parser_behavioral.zig  parser_deal_coverage.zig  parser_deal_snapshot.zig  parser_deal_strictness.zig  parser_dealx_connect_via.zig  parser_dealx_coverage.zig  parser_dealx_smoke.zig  parser_dealx_snapshot.zig  parser_dealx_tag_balance.zig  parser_import_placement.zig  property_ir_id_uniqueness.zig  property_span_containment.zig  recovery_corpus.zig  recovery_dealx_tag.zig  recovery_definition.zig  recovery_statement.zig  sema_behavioral.zig  sema_calc.zig  sema_corpus.zig  sema_dimensional.zig  sema_external_clone.zig  sema_resolution.zig  (+1 more)
tools/: gen-malformed.zig
(+236 files in other folders)
