[package]
name = "deal-lsp"
version = "0.3.0"
edition = "2021"
publish = false
# DO NOT add `links = "deal"` here — deal-ffi/ owns the single workspace claim
# for the native library `deal` (Cargo enforces this).

[[bin]]
name = "deal-lsp"
path = "src/main.rs"

[lib]
name = "deal_lsp"
path = "src/lib.rs"

[dependencies]
# Shared FFI surface (9 extern "C" exports + OwnedDealHandle + safe wrappers).
deal-ffi = { path = "../deal-ffi" }
# Shared deal.toml schema (ADR-0004 P5 WS-A): the LSP parses the manifest via
# deal_config::DealToml instead of hand-rolling it, honoring top-level [aliases].
deal-config = { path = "../deal-config" }
# Shared import-closure walker (ADR-0004 P5): the LSP loads the same reachable
# package set the CLI does (used by the P5 closure loader, WS-B).
deal-closure = { path = "../deal-closure" }
tower-lsp = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
dashmap = { workspace = true }
ropey = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[[bin]]
name = "deal-lsp-gen-golden"
path = "src/bin/gen_golden.rs"

[dev-dependencies]
insta = { workspace = true }
# Integration tests drain ClientSocket as a futures::Stream.
futures = "0.3"
